# mesh-deformation

./: CMakeLists.txt  README.md
ARAP-deformation/doc/: ARAP Deformation.md
doc/: 拉普拉斯变形算法实现.md
laplacian-deformation/doc/: 拉普拉斯变形算法实现.md
laplacian-deformation/src/: Laplacian.cpp  LaplacianDeform.cpp  LaplacianDeform.h  main.cpp
least-squre-mesh/doc/: 最小二乘网格近似.md
least-squre-mesh/src/: Laplacian.cpp  Laplacian.h  main.cpp
src/: Laplacian.h  LaplacianDeform.cpp  LaplacianDeform.h  edit_LaplaceDeformation.cpp  edit_LaplaceDeformation.h  main.cpp
